--- a/index.html
+++ b/index.html
@@ -204,8 +204,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     
 <!-- Project Tables -->
 
-
-
   <div class="w3-row-padding">
 	<!--Scad project card-->	
     <div class="w3-third w3-container w3-margin-bottom">
@@ -230,8 +228,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 			</div>
 			  <div class="w3-col s4  w3-center w3-container">
 <div class="w3-content" style="max-width:800px">
-  <img class="mySlides_1" src="family.jpg" style="width:100%">
-  <img class="mySlides_1" src="keji.jpg" style="width:100%">
+  <img class="mySlides_1" src="family.JPG" style="width:100%">
+  <img class="mySlides_1" src="keji.JPG" style="width:100%">
   <img class="mySlides_1" src="coin_trap.PNG" style="width:100%">
 </div>
 
