--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <div class="w3-content" style="max-width:800px">
   <img class="mySlides_1" src="family.JPG" style="width:100%">
   <img class="mySlides_1" src="keji.JPG" style="width:100%">
-  <img class="mySlides_1" src="coin_trap.PNG" style="width:100%">
+  <img class="mySlides_1" src="coin_trap.png" style="width:100%">
 </div>
 
 <div class="w3-center">
