--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
 	<!--Scad project card-->	
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="coin_trap.png" alt="Coin Trap" style="width:100%" title="Click to see more!" onclick="document.getElementById('modalScad').style.display='block'" class="w3-hover-opacity">
+      <img src="coin_trap.png" alt="Coin Trap" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" title="Click to see more!" onclick="document.getElementById('modalScad').style.display='block'" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>3D Modeling Projects</b></p>
         <p>This term we have worked on various 3D modeling projects. Click on the image above to take a look!</p>
