--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
  
 	  
 <!-- Progress bars / Skills -->
-    <div>
+    <div class="w3-container w3-padding-right w3-padding-left" style="margin-bottom:32px">
     <h4><strong>Class Averages</strong></h4>
 	  <p>Physics</p>
     <div class="w3-grey">
