--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     
 <!-- Info Tables -->
 	<div class="w3-row-padding w3-padding-16 w3-container" style="margin:0 -16px">
-        <h4><strong>More about me.</strong></h4>
+        <h4 style=" w3-padding-left"><strong>More about me.</strong></h4>
       <div class="w3-third w3-margin-bottom">
         <ul class="w3-ul w3-border w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-black w3-xlarge w3-padding-32">Education</li>
