--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 				<div class="w3-container">
 				<span onclick="document.getElementById('id04').style.display='none'" class="w3-button w3-display-topright">&times;</span>
 					<h1 style="color: black;">Below is a map of Halifax</h1>
-					<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90830.26104085213!2d-63.692014043186276!3d44.64924569700037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5a211407dbfac1%3A0x666be3a6438b2ddc!2sHalifax%2C+NS!5e0!3m2!1sen!2sca!4v1549637997920" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90830.26104085213!2d-63.692014043186276!3d44.64924569700037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5a211407dbfac1%3A0x666be3a6438b2ddc!2sHalifax%2C+NS!5e0!3m2!1sen!2sca!4v1549637997920" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		   </div>
 		  </div>
