--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -82,6 +82,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
 </header>
 
+<div class="w3-center w3-container">
+<h2><strong>Test of Timer Module</strong></h2>
+<!-- Trigger/Open the Modal -->
+  <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
+<!-- The Modal -->
+<div id="id01" class="w3-modal">
+  <div class="w3-modal-content">
+    <div class="w3-container">
+      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+      <h4><strong>Timer test...</strong></h4>
+
+    </div>
+  </div>
+</div>
+
+</button>
+</div>
+
 <!-- Grid -->
 <div class="w3-row">
 
